final-score: prevent text-wrap

--- a/style.css
+++ b/style.css
@@ -1105,7 +1105,7 @@ td + td {
   font-size:11px;
   background-color:#0E3C46;
   color:#ffce00;
-  
+
 }
 
 
@@ -1292,3 +1292,19 @@ g.checkpoint:hover circle {
 	cursor: pointer;
 }
 
+.cellscore #overview {
+  width: 100%;
+}
+
+.cellscore #overview td {
+  white-space: nowrap;
+  width: 1%;
+  text-align: right;
+}
+
+.cellscore #overview th {
+  white-space: nowrap;
+  width: 1%;
+  text-align: left;
+  padding-left: 4px;
+}
